<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >



    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strwelcome"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="12px" />

    </LinearLayout>
 

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtdesc"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/strdesc"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnnotify"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/strnotify" />

        <Button
            android:id="@+id/btnoption"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/stroptions" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnminimize"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/strminimize" />

    </LinearLayout>

</LinearLayout>