<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/txtsecurity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/strsecurity"
            android:textSize="18px" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="170dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center_vertical"
            android:src="@raw/img1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="60dp" >

        <TextView
            android:id="@+id/txtusn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strusn"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16px" />

        <EditText
            android:id="@+id/edtxtusn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.77"
            android:hint="@string/hintusn" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/strpwd"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16px" />

        <EditText
            android:id="@+id/edtxtpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintpwd"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/strlogin" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.55"
        android:baselineAligned="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnexit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/strexit" />

    </LinearLayout>

</LinearLayout>
